--- a/pom.xml
+++ b/pom.xml
@@ -7,34 +7,17 @@
 </parent>
 
 	<groupId>eu.linksmart.lc.distribution</groupId>
-	<artifactId>linux-amd64.main.deployable</artifactId>
+	<artifactId>eu.linksmart.lc.distribution.suite</artifactId>
 	<version>0.2.0-SNAPSHOT</version>
-<build>
-	<extensions>
-	<!-- put required extensions here -->
-	</extensions>
-	<plugins>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>build-helper-maven-plugin</artifactId>
-			<version>1.9.1</version>
-			<configuration>
-			<artifacts>
-				<artifact>
-					<file>dist/lslc-latest_linux_amd64.zip</file>
-					<type>zip</type>
-					<classifier>distribution</classifier>
-				</artifact>
-			</artifacts>
-			</configuration>
-			<executions>
-				<execution>
-					<goals>
-						<goal>attach-artifact</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-	</plugins>
-</build>
+	<packaging>pom</packaging>
+	<name>LS LC suite - all supported architectures</name>
+        <description>Triggers Maven versioning and artifact creation for all architectures</description>
+
+	<modules>
+		<module>distribution-linux-amd64</module>
+		<module>distribution-linux-arm</module>
+		<module>distribution-darwin-amd64</module>
+		<module>distribution-windows-amd64</module>
+		<module>distribution-windows-386</module>
+	</modules>
 </project> 
