added .tar.gz artifacts in poms/mvn build plugin

--- a/distribution-darwin-amd64/pom.xml
+++ b/distribution-darwin-amd64/pom.xml
@@ -26,6 +26,11 @@
 					<type>zip</type>
 					<classifier>distribution</classifier>
 				</artifact>
+				<artifact>
+					<file>../dist/lslc-latest_darwin_amd64.tar.gz</file>
+					<type>tar.gz</type>
+					<classifier>distribution</classifier>
+				</artifact>
 			</artifacts>
 			</configuration>
 			<executions>
