--- a/distribution-linux-arm/pom.xml
+++ b/distribution-linux-arm/pom.xml
@@ -26,6 +26,11 @@
 					<type>zip</type>
 					<classifier>distribution</classifier>
 				</artifact>
+				<artifact>
+					<file>../dist/lslc-latest_linux_arm.tar.gz</file>
+					<type>tar.gz</type>
+					<classifier>distribution</classifier>
+				</artifact>
 			</artifacts>
 			</configuration>
 			<executions>
