--- a/distribution-windows-386/pom.xml
+++ b/distribution-windows-386/pom.xml
@@ -22,12 +22,12 @@
 			<configuration>
 			<artifacts>
 				<artifact>
-					<file>../dist/lslc-latest_windows_386.zip</file>
+					<file>../dist/lslc-${parent.version}_windows_386.zip</file>
 					<type>zip</type>
 					<classifier>distribution</classifier>
 				</artifact>
 				<artifact>
-					<file>../dist/lslc-latest_windows_386.tar.gz</file>
+					<file>../dist/lslc-${parent.version}_windows_386.tar.gz</file>
 					<type>tar.gz</type>
 					<classifier>distribution</classifier>
 				</artifact>
