some tools added to the base image

--- a/deployment/docker/lslc-base/Dockerfile
+++ b/deployment/docker/lslc-base/Dockerfile
@@ -1,8 +1,14 @@
 FROM ubuntu:14.04
 MAINTAINER Alexandr Krylovskiy "alexandr.krylovskiy@fit.fraunhofer.de"
+
+# update distribution
 RUN apt-get update
-RUN apt-get install -y wget unzip
-RUN wget https://linksmart.eu/redmine/attachments/download/3409/lslc-0.2.0-rc1_linux_amd64.zip
-RUN unzip lslc-0.2.0-rc1_linux_amd64.zip
-RUN mv lslc-0.2.0-rc1_linux_amd64 /opt/lslc
+# install some tools
+RUN apt-get install -y wget unzip git openssl nmap mc nano curl jq
+
+# install the fraunhofer certificate
+RUN wget http://cdp1.pca.dfn.de/fraunhofer-ca/pub/cacert/cacert.pem -O /usr/local/share/ca-certificates/fhg.crt
+RUN update-ca-certificates
+
+# setup local connect home
 ENV LSLC_HOME /opt/lslc
