--- a/distribution-windows-amd64/pom.xml
+++ b/distribution-windows-amd64/pom.xml
@@ -2,15 +2,15 @@
 <modelVersion>4.0.0</modelVersion>
 
 <parent>
-        <groupId>eu.linksmart.lc.distribution</groupId>
-        <artifactId>eu.linksmart.lc.distribution.suite</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+    <groupId>eu.linksmart.lc.distribution</groupId>
+    <artifactId>eu.linksmart.lc.distribution.suite</artifactId>
+    <version>0.1.0</version>
 </parent>
 
 
-	<groupId>eu.linksmart.lc.distribution</groupId>
-	<artifactId>windows-amd64.main.deployable</artifactId>
-	<version>0.2.0-SNAPSHOT</version>
+<groupId>eu.linksmart.lc.distribution</groupId>
+<artifactId>windows-amd64.main.deployable</artifactId>
+<version>0.1.0</version>
 <build>
 	<extensions>
 	</extensions>
