--- a/deployment/docker/lslc-resource-catalog/Dockerfile
+++ b/deployment/docker/lslc-resource-catalog/Dockerfile
@@ -1,3 +1,3 @@
 FROM lslc/distribution:latest
-WORKDIR ${LSLC_HOME}/lslc-0.2.0-SNAPSHOT_linux_amd64
+WORKDIR ${LSLC_HOME}/lslc-0.1.0_linux_amd64
 ENTRYPOINT ["./resource-catalog"]
