--- a/distribution-linux-arm/pom.xml
+++ b/distribution-linux-arm/pom.xml
@@ -4,13 +4,13 @@
 <parent>
     <groupId>eu.linksmart.lc.distribution</groupId>
     <artifactId>eu.linksmart.lc.distribution.suite</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.0</version>
 </parent>
 
 
 <groupId>eu.linksmart.lc.distribution</groupId>
 <artifactId>linux-arm.main.deployable</artifactId>
-<version>0.2.0-SNAPSHOT</version>
+<version>0.2.0</version>
 <build>
 	<extensions>
 	</extensions>
