--- a/distribution-darwin-amd64/pom.xml
+++ b/distribution-darwin-amd64/pom.xml
@@ -4,13 +4,13 @@
 <parent>
     <groupId>eu.linksmart.lc.distribution</groupId>
     <artifactId>eu.linksmart.lc.distribution.suite</artifactId>
-    <version>0.3.0</version>
+    <version>0.4.0-SNAPSHOT</version>
 </parent>
 
 
 <groupId>eu.linksmart.lc.distribution</groupId>
 <artifactId>darwin-amd64.main.deployable</artifactId>
-<version>0.3.0</version>
+<version>0.4.0-SNAPSHOT</version>
 <build>
 	<extensions>
 	</extensions>
