--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 <groupId>eu.linksmart.lc.distribution</groupId>
 <artifactId>eu.linksmart.lc.distribution.suite</artifactId>
-<version>0.3.0</version>
+<version>0.4.0-SNAPSHOT</version>
 <packaging>pom</packaging>
 <name>LS LC suite - all supported architectures</name>
     <description>Triggers Maven versioning and artifact creation for all architectures</description>
